--- a/Teams Presence Dynamic Light/Teams Presence Dynamic Light.csproj
+++ b/Teams Presence Dynamic Light/Teams Presence Dynamic Light.csproj
@@ -44,6 +44,14 @@
     <PackageReference Include="Microsoft.Identity.Client.Extensions.Msal" Version="4.61.0" />
     <PackageReference Include="System.Windows.Extensions" Version="8.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\OneDrive - Intel Corporation\Desktop\GPTW\Personal\TeamsLocalApi\src\Ro.Teams.LocalApi.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Settings.Designer.cs" />
+    <None Remove="Settings.settings" />
+    <Compile Remove="**\Settings.Designer.cs" />
+  </ItemGroup>
 
   <!--
     Defining the "HasPackageAndPublishMenuAddedByProject" property here allows the Solution
